[gd_scene load_steps=7 format=3 uid="uid://ccr5vwrk4f72p"]

[ext_resource type="PackedScene" uid="uid://bo6bkuh2emu7i" path="res://TheGame/parallax_background.tscn" id="1_gfqty"]
[ext_resource type="Script" uid="uid://bl5cir2b8xjtf" path="res://GDscripts/main_game.gd" id="1_lweib"]
[ext_resource type="PackedScene" uid="uid://bljy3a28ikt40" path="res://enemies/birdEnemy.tscn" id="2_1j64x"]
[ext_resource type="AudioStream" uid="uid://clfapo5m0cwko" path="res://music/menu/Edvard Grieg_ Peer Gynt - Morning Mood.mp3" id="2_jx6g1"]
[ext_resource type="PackedScene" uid="uid://d3446qnhg3cxc" path="res://player/player.tscn" id="5_2r60g"]

[sub_resource type="Curve2D" id="Curve2D_jx6g1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 640, 272, 0, 0, 0, 0, 640, 120)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_lweib")
BirdScene = ExtResource("2_1j64x")

[node name="parallaxBackground" parent="." instance=ExtResource("1_gfqty")]

[node name="BirdSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_jx6g1")

[node name="BirdLocation" type="PathFollow2D" parent="BirdSpawn"]
position = Vector2(640, 272)
rotation = -1.5708

[node name="Player" parent="." instance=ExtResource("5_2r60g")]
position = Vector2(-56, 336)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(120, 336)

[node name="Timer" type="Node" parent="."]

[node name="StartTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="Timer"]

[node name="MobSpawnTimer" type="Timer" parent="Timer"]

[node name="Audio" type="Node" parent="."]

[node name="MainMenuTheme" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("2_jx6g1")
autoplay = true

[connection signal="timeout" from="Timer/StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="Timer/ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="Timer/MobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
